More warnings removal