@@ -128,7 +128,7 @@ public class FindCollectionOperationTest extends OperationTestBase {
                     "username": "user2"
                   }
                   """;
-      CommandContext commandContext = createCommandContextWithCommandName("jsonBytesReadCommand");
+      var commandContext = createCommandContextWithCommandName("jsonBytesReadCommand");
       SimpleStatement stmt = SimpleStatement.newInstance(collectionReadCql);
       List<Row> rows =
           Arrays.asList(
@@ -261,10 +261,10 @@ public class FindCollectionOperationTest extends OperationTestBase {
 
       SimpleStatement stmt1 =
           SimpleStatement.newInstance(collectionReadCql, boundKeyForStatement("doc1"));
-      List<Row> rows1 = Arrays.asList(resultRow(0, "doc1", UUID.randomUUID(), doc1));
+      List<Row> rows1 = List.of(resultRow(0, "doc1", UUID.randomUUID(), doc1));
       SimpleStatement stmt2 =
           SimpleStatement.newInstance(collectionReadCql, boundKeyForStatement("doc2"));
-      List<Row> rows2 = Arrays.asList(resultRow(0, "doc2", UUID.randomUUID(), doc2));
+      List<Row> rows2 = List.of(resultRow(0, "doc2", UUID.randomUUID(), doc2));
       AsyncResultSet results1 = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows1, null);
       AsyncResultSet results2 = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows2, null);
       final AtomicInteger callCount1 = new AtomicInteger();
@@ -321,7 +321,6 @@ public class FindCollectionOperationTest extends OperationTestBase {
           .contains(objectMapper.readTree(doc1), objectMapper.readTree(doc2));
       assertThat(result.errors()).isNullOrEmpty();
       assertThat(result.status()).isEmpty();
-      ;
     }
 
     @Test
@@ -346,10 +345,10 @@ public class FindCollectionOperationTest extends OperationTestBase {
 
       SimpleStatement stmt1 =
           SimpleStatement.newInstance(collectionReadCql, boundKeyForStatement("doc1"));
-      List<Row> rows1 = Arrays.asList(resultRow(0, "doc1", UUID.randomUUID(), doc1));
+      List<Row> rows1 = List.of(resultRow(0, "doc1", UUID.randomUUID(), doc1));
       SimpleStatement stmt2 =
           SimpleStatement.newInstance(collectionReadCql, boundKeyForStatement("doc2"));
-      List<Row> rows2 = Arrays.asList(resultRow(0, "doc2", UUID.randomUUID(), doc2));
+      List<Row> rows2 = List.of(resultRow(0, "doc2", UUID.randomUUID(), doc2));
       AsyncResultSet results1 = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows1, null);
       AsyncResultSet results2 = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows2, null);
       final AtomicInteger callCount1 = new AtomicInteger();
@@ -469,11 +468,11 @@ public class FindCollectionOperationTest extends OperationTestBase {
       SimpleStatement stmt1 =
           SimpleStatement.newInstance(
               collectionReadCql, boundKeyForStatement("doc1"), textFilterValue);
-      List<Row> rows1 = Arrays.asList(resultRow(0, "doc1", UUID.randomUUID(), doc1));
+      List<Row> rows1 = List.of(resultRow(0, "doc1", UUID.randomUUID(), doc1));
       SimpleStatement stmt2 =
           SimpleStatement.newInstance(
               collectionReadCql, boundKeyForStatement("doc2"), textFilterValue);
-      List<Row> rows2 = Arrays.asList(resultRow(0, "doc2", UUID.randomUUID(), doc2));
+      List<Row> rows2 = List.of(resultRow(0, "doc2", UUID.randomUUID(), doc2));
       AsyncResultSet results1 = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows1, null);
       AsyncResultSet results2 = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows2, null);
       final AtomicInteger callCount1 = new AtomicInteger();
@@ -554,10 +553,10 @@ public class FindCollectionOperationTest extends OperationTestBase {
                   """;
       SimpleStatement stmt1 =
           SimpleStatement.newInstance(collectionReadCql, boundKeyForStatement("doc1"));
-      List<Row> rows1 = Arrays.asList(resultRow(0, "doc1", UUID.randomUUID(), doc1));
+      List<Row> rows1 = List.of(resultRow(0, "doc1", UUID.randomUUID(), doc1));
       SimpleStatement stmt2 =
           SimpleStatement.newInstance(collectionReadCql, boundKeyForStatement("doc2"));
-      List<Row> rows2 = Arrays.asList(resultRow(0, "doc2", UUID.randomUUID(), doc2));
+      List<Row> rows2 = List.of(resultRow(0, "doc2", UUID.randomUUID(), doc2));
       AsyncResultSet results1 = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows1, null);
       AsyncResultSet results2 = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows2, null);
       final AtomicInteger callCount1 = new AtomicInteger();
@@ -630,7 +629,7 @@ public class FindCollectionOperationTest extends OperationTestBase {
 
       SimpleStatement stmt =
           SimpleStatement.newInstance(collectionReadCql, boundKeyForStatement("doc1"));
-      List<Row> rows = Arrays.asList(resultRow(0, "doc1", UUID.randomUUID(), doc1));
+      List<Row> rows = List.of(resultRow(0, "doc1", UUID.randomUUID(), doc1));
       AsyncResultSet results = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows, null);
       final AtomicInteger callCount = new AtomicInteger();
       QueryExecutor queryExecutor = mock(QueryExecutor.class);
@@ -683,7 +682,7 @@ public class FindCollectionOperationTest extends OperationTestBase {
 
       SimpleStatement stmt =
           SimpleStatement.newInstance(collectionReadCql, boundKeyForStatement("doc1"));
-      AsyncResultSet results = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, Arrays.asList(), null);
+      AsyncResultSet results = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, List.of(), null);
       final AtomicInteger callCount = new AtomicInteger();
       QueryExecutor queryExecutor = mock(QueryExecutor.class);
       when(queryExecutor.executeRead(eq(requestContext), eq(stmt), any(), anyInt()))
@@ -744,7 +743,7 @@ public class FindCollectionOperationTest extends OperationTestBase {
 
       final String textFilterValue = "username " + new DocValueHasher().getHash("user1").hash();
       SimpleStatement stmt = SimpleStatement.newInstance(collectionReadCql, textFilterValue);
-      List<Row> rows = Arrays.asList(resultRow(0, "doc1", UUID.randomUUID(), doc1));
+      List<Row> rows = List.of(resultRow(0, "doc1", UUID.randomUUID(), doc1));
       AsyncResultSet results = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows, null);
       final AtomicInteger callCount = new AtomicInteger();
       QueryExecutor queryExecutor = mock(QueryExecutor.class);
@@ -806,7 +805,7 @@ public class FindCollectionOperationTest extends OperationTestBase {
 
       SimpleStatement stmt =
           SimpleStatement.newInstance(collectionReadCql, "amount", new BigDecimal(100));
-      List<Row> rows = Arrays.asList(resultRow(0, "doc1", UUID.randomUUID(), doc1));
+      List<Row> rows = List.of(resultRow(0, "doc1", UUID.randomUUID(), doc1));
       AsyncResultSet results = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows, null);
       final AtomicInteger callCount = new AtomicInteger();
       QueryExecutor queryExecutor = mock(QueryExecutor.class);
@@ -869,7 +868,7 @@ public class FindCollectionOperationTest extends OperationTestBase {
 
       SimpleStatement stmt =
           SimpleStatement.newInstance(collectionReadCql, "amount", new BigDecimal(200));
-      List<Row> rows = Arrays.asList(resultRow(0, "doc1", UUID.randomUUID(), doc1));
+      List<Row> rows = List.of(resultRow(0, "doc1", UUID.randomUUID(), doc1));
       AsyncResultSet results = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows, null);
       final AtomicInteger callCount = new AtomicInteger();
       QueryExecutor queryExecutor = mock(QueryExecutor.class);
@@ -933,7 +932,7 @@ public class FindCollectionOperationTest extends OperationTestBase {
       SimpleStatement stmt =
           SimpleStatement.newInstance(
               collectionReadCql, "dob", Instant.ofEpochMilli(1672531200000L));
-      List<Row> rows = Arrays.asList(resultRow(0, "doc1", UUID.randomUUID(), doc1));
+      List<Row> rows = List.of(resultRow(0, "doc1", UUID.randomUUID(), doc1));
       AsyncResultSet results = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows, null);
       final AtomicInteger callCount = new AtomicInteger();
       QueryExecutor queryExecutor = mock(QueryExecutor.class);
@@ -997,7 +996,7 @@ public class FindCollectionOperationTest extends OperationTestBase {
       SimpleStatement stmt =
           SimpleStatement.newInstance(
               collectionReadCql, "dob", Instant.ofEpochMilli(1672531200000L));
-      List<Row> rows = Arrays.asList(resultRow(0, "doc1", UUID.randomUUID(), doc1));
+      List<Row> rows = List.of(resultRow(0, "doc1", UUID.randomUUID(), doc1));
       AsyncResultSet results = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows, null);
       final AtomicInteger callCount = new AtomicInteger();
       QueryExecutor queryExecutor = mock(QueryExecutor.class);
@@ -1060,7 +1059,7 @@ public class FindCollectionOperationTest extends OperationTestBase {
       final String booleanFilterValue =
           "registration_active " + new DocValueHasher().getHash(true).hash();
       SimpleStatement stmt = SimpleStatement.newInstance(collectionReadCql, booleanFilterValue);
-      List<Row> rows = Arrays.asList(resultRow(0, "doc1", UUID.randomUUID(), doc1));
+      List<Row> rows = List.of(resultRow(0, "doc1", UUID.randomUUID(), doc1));
       AsyncResultSet results = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows, null);
       final AtomicInteger callCount = new AtomicInteger();
       QueryExecutor queryExecutor = mock(QueryExecutor.class);
@@ -1123,7 +1122,7 @@ public class FindCollectionOperationTest extends OperationTestBase {
       final String dateFilterValue =
           "date_field " + new DocValueHasher().getHash(Instant.ofEpochMilli(1672531200000L)).hash();
       SimpleStatement stmt = SimpleStatement.newInstance(collectionReadCql, dateFilterValue);
-      List<Row> rows = Arrays.asList(resultRow(0, "doc1", UUID.randomUUID(), doc1));
+      List<Row> rows = List.of(resultRow(0, "doc1", UUID.randomUUID(), doc1));
       AsyncResultSet results = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows, null);
       final AtomicInteger callCount = new AtomicInteger();
       QueryExecutor queryExecutor = mock(QueryExecutor.class);
@@ -1185,7 +1184,7 @@ public class FindCollectionOperationTest extends OperationTestBase {
                   """;
 
       SimpleStatement stmt = SimpleStatement.newInstance(collectionReadCql, "registration_active");
-      List<Row> rows = Arrays.asList(resultRow(0, "doc1", UUID.randomUUID(), doc1));
+      List<Row> rows = List.of(resultRow(0, "doc1", UUID.randomUUID(), doc1));
       AsyncResultSet results = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows, null);
       final AtomicInteger callCount = new AtomicInteger();
       QueryExecutor queryExecutor = mock(QueryExecutor.class);
@@ -1247,7 +1246,7 @@ public class FindCollectionOperationTest extends OperationTestBase {
 
       SimpleStatement stmt =
           SimpleStatement.newInstance(collectionReadCql, "tags Stag1", "tags Stag2");
-      List<Row> rows = Arrays.asList(resultRow(0, "doc1", UUID.randomUUID(), doc1));
+      List<Row> rows = List.of(resultRow(0, "doc1", UUID.randomUUID(), doc1));
       AsyncResultSet results = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows, null);
       final AtomicInteger callCount = new AtomicInteger();
       QueryExecutor queryExecutor = mock(QueryExecutor.class);
@@ -1310,7 +1309,7 @@ public class FindCollectionOperationTest extends OperationTestBase {
       SimpleStatement stmt =
           SimpleStatement.newInstance(
               collectionReadCql, "username Suser1", "tags Stag1", "tags Stag2");
-      List<Row> rows = Arrays.asList(resultRow(0, "doc1", UUID.randomUUID(), doc1));
+      List<Row> rows = List.of(resultRow(0, "doc1", UUID.randomUUID(), doc1));
       AsyncResultSet results = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows, null);
       final AtomicInteger callCount = new AtomicInteger();
       QueryExecutor queryExecutor = mock(QueryExecutor.class);
@@ -1378,7 +1377,7 @@ public class FindCollectionOperationTest extends OperationTestBase {
       SimpleStatement stmt =
           SimpleStatement.newInstance(
               collectionReadCql, "username Suser1", "tags Stag1", "tags Stag2");
-      List<Row> rows = Arrays.asList(resultRow(0, "doc1", UUID.randomUUID(), doc1));
+      List<Row> rows = List.of(resultRow(0, "doc1", UUID.randomUUID(), doc1));
       AsyncResultSet results = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows, null);
       final AtomicInteger callCount = new AtomicInteger();
       QueryExecutor queryExecutor = mock(QueryExecutor.class);
@@ -1444,7 +1443,7 @@ public class FindCollectionOperationTest extends OperationTestBase {
                   """;
 
       SimpleStatement stmt = SimpleStatement.newInstance(collectionReadCql, "tags", 2);
-      List<Row> rows = Arrays.asList(resultRow(0, "doc1", UUID.randomUUID(), doc1));
+      List<Row> rows = List.of(resultRow(0, "doc1", UUID.randomUUID(), doc1));
       AsyncResultSet results = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows, null);
       final AtomicInteger callCount = new AtomicInteger();
       QueryExecutor queryExecutor = mock(QueryExecutor.class);
@@ -1511,7 +1510,7 @@ public class FindCollectionOperationTest extends OperationTestBase {
 
       final String tagsHash = new DocValueHasher().getHash(List.of("tag1", "tag2")).hash();
       SimpleStatement stmt = SimpleStatement.newInstance(collectionReadCql, "tags", tagsHash);
-      List<Row> rows = Arrays.asList(resultRow(0, "doc1", UUID.randomUUID(), doc1));
+      List<Row> rows = List.of(resultRow(0, "doc1", UUID.randomUUID(), doc1));
       AsyncResultSet results = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows, null);
       final AtomicInteger callCount = new AtomicInteger();
       QueryExecutor queryExecutor = mock(QueryExecutor.class);
@@ -1578,7 +1577,7 @@ public class FindCollectionOperationTest extends OperationTestBase {
 
       final String tagsHash = new DocValueHasher().getHash(List.of("tag1", "tag3")).hash();
       SimpleStatement stmt = SimpleStatement.newInstance(collectionReadCql, "tags", tagsHash);
-      List<Row> rows = Arrays.asList(resultRow(0, "doc1", UUID.randomUUID(), doc1));
+      List<Row> rows = List.of(resultRow(0, "doc1", UUID.randomUUID(), doc1));
       AsyncResultSet results = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows, null);
       final AtomicInteger callCount = new AtomicInteger();
       QueryExecutor queryExecutor = mock(QueryExecutor.class);
@@ -1644,7 +1643,7 @@ public class FindCollectionOperationTest extends OperationTestBase {
                   """;
       final String hash = new DocValueHasher().getHash(Map.of("col", "val")).hash();
       SimpleStatement stmt = SimpleStatement.newInstance(collectionReadCql, "sub_doc", hash);
-      List<Row> rows = Arrays.asList(resultRow(0, "doc1", UUID.randomUUID(), doc1));
+      List<Row> rows = List.of(resultRow(0, "doc1", UUID.randomUUID(), doc1));
       AsyncResultSet results = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows, null);
       final AtomicInteger callCount = new AtomicInteger();
       QueryExecutor queryExecutor = mock(QueryExecutor.class);
@@ -1710,7 +1709,7 @@ public class FindCollectionOperationTest extends OperationTestBase {
                       """;
       final String hash = new DocValueHasher().getHash(Map.of("col", "val")).hash();
       SimpleStatement stmt = SimpleStatement.newInstance(collectionReadCql, "sub_doc", hash);
-      List<Row> rows = Arrays.asList(resultRow(0, "doc1", UUID.randomUUID(), doc1));
+      List<Row> rows = List.of(resultRow(0, "doc1", UUID.randomUUID(), doc1));
       AsyncResultSet results = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows, null);
       final AtomicInteger callCount = new AtomicInteger();
       QueryExecutor queryExecutor = mock(QueryExecutor.class);
@@ -1871,7 +1870,7 @@ public class FindCollectionOperationTest extends OperationTestBase {
               TestColumn.ofVarchar("query_null_values['username']"),
               TestColumn.ofDate("query_timestamp_values['username']"));
       List<Row> rows =
-          Arrays.asList(
+          List.of(
               resultRow(
                   columnDefs,
                   0,
@@ -2072,7 +2071,7 @@ public class FindCollectionOperationTest extends OperationTestBase {
               TestColumn.ofVarchar("query_null_values['sort_date']"),
               TestColumn.ofDate("query_timestamp_values['sort_date']"));
       List<Row> rows =
-          Arrays.asList(
+          List.of(
               resultRow(
                   columnDefs,
                   0,
@@ -2254,7 +2253,7 @@ public class FindCollectionOperationTest extends OperationTestBase {
               TestColumn.ofVarchar("query_null_values['username']"),
               TestColumn.ofDate("query_timestamp_values['username']"));
       List<Row> rows =
-          Arrays.asList(
+          List.of(
               resultRow(
                   columnDefs,
                   0,
@@ -2430,7 +2429,7 @@ public class FindCollectionOperationTest extends OperationTestBase {
               TestColumn.ofVarchar("query_null_values['username']"),
               TestColumn.ofDate("query_timestamp_values['username']"));
       List<Row> rows =
-          Arrays.asList(
+          List.of(
               resultRow(
                   columnDefs,
                   0,
@@ -2594,7 +2593,7 @@ public class FindCollectionOperationTest extends OperationTestBase {
             TestColumn.ofVarchar("query_null_values['uuidv6']"),
             TestColumn.ofDate("query_timestamp_values['uuidv6']"));
     List<Row> rows =
-        Arrays.asList(
+        List.of(
             resultRow(
                 columnDefs,
                 1,
@@ -2707,7 +2706,7 @@ public class FindCollectionOperationTest extends OperationTestBase {
       CqlVector<Float> vectorValue = vectorForStatement(0.25f, 0.25f, 0.25f, 0.25f);
       SimpleStatement stmt = SimpleStatement.newInstance(collectionReadCql, vectorValue);
       List<Row> rows =
-          Arrays.asList(
+          List.of(
               resultRow(0, "doc1", UUID.randomUUID(), doc1),
               resultRow(1, "doc2", UUID.randomUUID(), doc2));
       AsyncResultSet results = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows, null);
@@ -2782,7 +2781,7 @@ public class FindCollectionOperationTest extends OperationTestBase {
       CqlVector<Float> vectorValue = vectorForStatement(0.25f, 0.25f, 0.25f, 0.25f);
       SimpleStatement stmt = SimpleStatement.newInstance(collectionReadCql, vectorValue);
       List<Row> rows =
-          Arrays.asList(
+          List.of(
               resultRow(0, "doc1", UUID.randomUUID(), doc1),
               resultRow(1, "doc2", UUID.randomUUID(), doc2));
       AsyncResultSet results = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows, null);
@@ -2849,7 +2848,7 @@ public class FindCollectionOperationTest extends OperationTestBase {
       CqlVector<Float> vectorValue = vectorForStatement(0.25f, 0.25f, 0.25f, 0.25f);
       SimpleStatement stmt =
           SimpleStatement.newInstance(collectionReadCql, textFilterValue, vectorValue);
-      List<Row> rows = Arrays.asList(resultRow(0, "doc1", UUID.randomUUID(), doc1));
+      List<Row> rows = List.of(resultRow(0, "doc1", UUID.randomUUID(), doc1));
       AsyncResultSet results = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows, null);
       final AtomicInteger callCount = new AtomicInteger();
       QueryExecutor queryExecutor = mock(QueryExecutor.class);
@@ -3003,7 +3002,7 @@ public class FindCollectionOperationTest extends OperationTestBase {
     return new MockRow(
         KEY_TXID_JSON_COLUMNS,
         index,
-        Arrays.asList(byteBufferForKey(key), byteBufferFrom(txId), byteBufferFrom(doc)));
+        List.of(byteBufferForKey(key), byteBufferFrom(txId), byteBufferFrom(doc)));
   }
 
   MockRow resultRow(ColumnDefinitions columnDefs, int index, Object... values) {
